--- a/UI/pages/index.html
+++ b/UI/pages/index.html
@@ -2,71 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>BroadCaster</title>
         <link href="../css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
-        <div class="top-bar">
-           <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
-           <div class="menu">
-               <ul>
-                   <li><a href="../pages/index.html">Home</a></li>
-                   <li><a href="../pages/login.html">Sign In</a></li>
-                   <li><a href="../pages/signup.html">Sign Up</a></li>
-                   <li><a href="../pages/contact.html">Contact</a></li>
-               </ul>
-           </div> 
-        </div>
-        <div class="banner">
-            <div class="banner-text">
-                <div class="banner-text-items">
-                    <h2>BroadCaster Leading to solutions</h2><br><br>
-                    <p><b>We are all responsible <br>to provide news and information <br>to the government</b>.</p>
+        <header>
+            <nav>
+                <div class="row clearfix">
+                        <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
+                 <ul class="main-nav animated slideInDown" id="check-class">
+                     <li><a href="../pages/index.html">Home</a></li>
+                     <li><a href="../pages/login.html">Sign In</a></li>
+                     <li><a href="../pages/sign up.html">Sign Up</a></li>
+                     <li><a href="../pages/contact.html">Contact</a></li>
+                 </ul>
+                 <a href="#" class="mobile-icon" onclick="slideshow()"><i class="fas fa-bars"></i></a>
                 </div>
-            </div>
-        </div>
-        <h1>Red-flag records</h1><br>
-        <h2 style=" color:green; text-align:inherit; text-align: center; font-size: 17px; ">Every one should report any incident </br> related to corruption to the government</h2>
-        <div class="main-content">
-                <div class="main1">
-                    <img src="../images/img.jpg">
+            </nav>
+            <div class="main-content-header">
+            <h1>WELCOME TO <span class="colorchange">BROADCASTER</span>. <br>
+                HOUSE OF RECORDS</h1>
+                <a href="../pages/login.html" class="btn btn-full">Click to Add</a>
+                <a href="#" class="btn btn-nav">show me more</a>
                 </div>
-            <div class="main1">
-                <img src="../images/img1.jpg"> 
-            </div>
-            <div class="main1">
-                <img src="../images/img2.jpg">
-            </div>
-        </div>
-        <h1 id="head">Intervention records</h1><br>
-        <h2 style=" color:green; text-align:inherit; text-align: center; font-size: 17px; ">Call a government agency to intervene </br> related to repair bad road sections, collapsed bridges, flooding e.t.c</h2>
-        <div class="main-content1">
-                <div class="main1">
-                    <img src="../images/img9.jpg">
-                </div>
-            <div class="main1">
-                <img src="../images/img17.jpg">
-            </div>
-            <div class="main1">
-                <img src="../images/img14.jpg">
-            </div>
-        </div>
+        </header>
         <footer>
-                <div class="container-social-media">
-                    <p>Connect with us</p>
-                <div class="footer-social-meadia">
-                    <a href="#">
-                        <img src="../images/facebook.png" alt="facebook icon">
-                    </a>
-                    <a href="#">
-                        <img src="../images/instagram.jpg" alt="instagram icon">
-                    </a>
-                    <a href="#">
-                        <img src="../images/twitter.png" alt="twitter icon">
-                    </a>
+            <div class="footer-main-div">
+                <div class="footer-social-icons">
+                    <ul>
+                        <li><a href="#" target="blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" target="blank"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" target="blank"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#" target="blank"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="#" target="blank"><i class="fa fa-instagram"></i></a></li>
+                    </ul>
                 </div>
+                <div class="footer-menu-one">
+                        <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Sign In</a></li>
+                                <li><a href="#">Sign Out</a></li>
+                                <li><a href="#">Contact</a></li>
+                        </ul>
                 </div>
-                <div class="footer-copyright"><p>BroadCaster ©2019,  All Right reserved </p></div>
-            </footer>
+            </div>
+        </footer>
+        <div class="footer-botton">
+            <p>Design by: <a href="#">@Emmy engineer</a></p>
+        </div>
+        <script src="../script/script.js">
+        </script>
     </body>
 </html>
+
