feature(create): add new record page
a user should add new record after filling his or her enail and password

[finishes:#169563688]

--- a/UI/pages/red.html
+++ b/UI/pages/red.html
@@ -16,26 +16,17 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
-                     <li><a href="../pages/login.html">Sign In</a></li>
-                     <li><a href="../pages/sign up.html">Sign Up</a></li>
-                     <li><a href="../pages/contact.html">Contact Us</a></li>
+                     <li><a href="../pages/create.html">Red-flag record</a></li>
+                     <li><a href="../pages/create.html">Intervention record</a></li>
+                     
                  </ul>
                  <a href="#" class="mobile-icon" onclick="slideshow()"><i class="fas fa-bars"></i></a>
                 </div>
             </nav>
-            <div class="contact">
-                    <div class="contact-text">
-                       <div class="contact-items">
-                           <h2>Contact Us</h2>
-                           <input type="text" placeholder="Your name....">
-                           <input type="text" placeholder="Your email...">
-                           <textarea cols="20" rows="20" placeholder="Your Message!!!"></textarea>
-                           <a href="#">Submit</a>
-                       </div>
-                     </div>
-                   </div>
-         </header> 
-         <script src="../script/script.js">
-         </script>
-    </body>
-    </html>
+            <div class="main-content-header">
+            <h1>WELCOME TO <span class="colorchange">BROADCASTER</span>. <br>
+                LEADING TO SOLUTIONS</h1>
+    <script src="../script/script.js">
+    </script>
+  </body>
+ </html>
