feature(Add-new-records): add record page
A user should add records to red-flag or intervention record

[finishes:https://www.pivotaltracker.com/story/show/169563688]

--- a/UI/pages/red.html
+++ b/UI/pages/red.html
@@ -20,7 +20,7 @@
                      <li><a href="../pages/create.html">Intervention record</a></li>
                      
                  </ul>
-                 <a href="#" class="mobile-icon" onclick="slideshow()"><i class="fas fa-bars"></i></a>
+                 <a href="#" class="mobile-icon" onclick="slideshow()">Menu</a>
                 </div>
             </nav>
             <div class="main-content-header">
