--- a/UI/pages/create.html
+++ b/UI/pages/create.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
         <title>BroadCaster</title>
         <link href="../css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+       
     </head>
     <body>
         <header style="height: 100px;">
@@ -20,7 +18,7 @@
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
                  </ul>
-                 <a href="#" class="mobile-icon" onclick="slideshow()"><i class="fas fa-bars"></i></a>
+                 <a href="#" class="mobile-icon" onclick="slideshow()">Menu</a>
                 </div>
             </nav>
            
