--- a/UI/pages/index.html
+++ b/UI/pages/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
         <title>BroadCaster</title>
         <link href="../css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -16,11 +13,12 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
+                     <li><a href="../pages/login.html">Admin</a></li>
                      <li><a href="../pages/login.html">Sign In</a></li>
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
                  </ul>
-                 <a href="#" class="mobile-icon" onclick="slideshow()"><i class="fas fa-bars"></i></a>
+                 <a href="#" class="mobile-icon" onclick="slideshow()">Menu</a>
                 </div>
             </nav>
             <div class="main-content-header">
@@ -34,19 +32,19 @@
             <div class="footer-main-div">
                 <div class="footer-social-icons">
                     <ul>
-                        <li><a href="#" target="blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" target="blank"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#" target="blank"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#" target="blank"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#" target="blank"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#" target="blank"><img src="../images/face.png" alt=""></a></li>
+                        <li><a href="#" target="blank"><img src="../images/twit.png" alt=""></a></li>
+                        <li><a href="#" target="blank"><img src="../images/google.png" alt=""></a></li>
+                        <li><a href="#" target="blank"><img src="../images/you.png" alt=""></a></li>
+                        <li><a href="#" target="blank"><img src="../images/insta.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="footer-menu-one">
                         <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Sign In</a></li>
-                                <li><a href="#">Sign Out</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="../pages/index.html">Home</a></li>
+                                <li><a href="../pages/login.html">Sign In</a></li>
+                                <li><a href="../pages/sign up.html">Sign Up</a></li>
+                                <li><a href="../pages/contact.html">Contact</a></li>
                         </ul>
                 </div>
             </div>
