--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
         <title>BroadCaster</title>
         <link href="../css/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <header>
@@ -20,22 +17,22 @@
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
                  </ul>
-                 <a href="#" class="mobile-icon" onclick="slideshow()"><i class="fas fa-bars"></i></a>
+                 <a href="#" class="mobile-icon" onclick="slideshow()">Menu</a>
                 </div>
             </nav>
-            <div class="signin">
-                    <form>
-                        <h2 style="color:white">Log In</h2><br><br>
-                        <input type="text" name="username" placeholder="Username">
-                        <input type="password" name="Pass" placeholder="Password"><br><br>
-                        <a href="../pages/red.html"> <input type="button" value="Log In"></a><br><br>
-                        <div id="container">
-                        <a href="re.html" style="margin-right: 0px; font-size: 13px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Reset Password</a>
-                        <a id="for" href="for.html" style="margin-right: 0px; font-size: 13px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Forget Password</a>
-                        </div><br><br><br><br>
-                        Don't have account? <a href="signup.html">&nbsp;Sign Up</a>
-                    </form>
+            <div class="login-box">
+                <h1>Login</h1>
+                <div class="textbox">
+                        <img src="../images/user.jpg">
+                    <input type="text" placeholder="Username" name="" value="">
+                    </div>
+                    <div class="textbox">
+                        <img src="../images/password.png">
+                        <input type="password" placeholder="password" name="" value="">
+                        </div>
+                        <a href="../pages/red.html"><input class="bt" type="button" name="" value="Login"></a>
                 </div>
+            </div>
         </header>
         <script src="../script/script.js">
         </script>
