feature(create):Add records
a user should add his or her records

finishes:#169563688]

--- a/UI/pages/create.html
+++ b/UI/pages/create.html
@@ -8,12 +8,13 @@
        
     </head>
     <body>
-        <header style="height: 100px;">
+        <header style="height: 160px;">
             <nav>
                 <div class="row clearfix">
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
+                     <li><a href="../pages/login.html">Admin</a></li>
                      <li><a href="../pages/login.html">Sign In</a></li>
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
@@ -44,7 +45,7 @@
                                <input type="text" placeholder="Your address....">
                                <input type="text" placeholder="Incident address...">
                                <textarea id="textarea1" cols="20" rows="20" placeholder="Your incident location!!! google map"></textarea> <br>
-                               <textarea cols="20" rows="20" placeholder="Your Message!!!"></textarea><br>
+                               <textarea id="textarea2" cols="20" rows="20" placeholder="Your Message!!!"></textarea><br>
                                <div class="file">
                                    Upload Image:
                                <input type="file" name="inpFile" id="inpFile">
