feature(create): Add records
 A user should be able to add his or her records

[finishes:#169563688]

--- a/UI/pages/contact.html
+++ b/UI/pages/contact.html
@@ -13,6 +13,7 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
+                     <li><a href="../pages/login.html">Admin</a></li>
                      <li><a href="../pages/login.html">Sign In</a></li>
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact Us</a></li>
@@ -27,7 +28,7 @@
                            <input type="text" placeholder="Your name....">
                            <input type="text" placeholder="Your email...">
                            <textarea cols="20" rows="20" placeholder="Your Message!!!"></textarea>
-                           <a href="#">Submit</a>
+                           <a href="#" id="sub">Submit</a>
                        </div>
                      </div>
                    </div>
