--- a/UI/pages/sign up.html
+++ b/UI/pages/sign up.html
@@ -13,6 +13,7 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
+                     <li><a href="../pages/login.html">Admin</a></li>
                      <li><a href="../pages/login.html">Sign In</a></li>
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
@@ -25,8 +26,8 @@
                     <div class="col-md">
                         <div class="row">
                     <div class="col-md-1 register-left">  
-                        <img src="../images/show.png">
-                      <h3>Join Us</h3>
+                        <img src="../images/gp.png">
+                      <h3 id="joi">Join Us</h3>
                       <p>BroadCaster leading to solutions related to corruption<br> and intervene with the government </p>
                       <a href="../pages/index.html"><button type="button" class="primary">About Us</button></a>
                     </div>
