--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -13,6 +13,7 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
+                     <li><a href="../pages/login.html">Admin</a></li>
                      <li><a href="../pages/login.html">Sign In</a></li>
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
@@ -28,7 +29,7 @@
                     </div>
                     <div class="textbox">
                         <img src="../images/password.png">
-                        <input type="password" placeholder="password" name="" value="">
+                        <input type="password" placeholder="Password" name="" value="">
                         </div>
                         <a href="../pages/red.html"><input class="bt" type="button" name="" value="Login"></a>
                 </div>
