--- a/UI/pages/user.html
+++ b/UI/pages/user.html
@@ -41,15 +41,15 @@
                             <table>
                                 <head>
                                     <th style="color: black;">SN</th>
-                                    <th style="color: black;" >Title</th>
-                                    <th style="color: black;">Author</th>
+                                    <th style="color: black;" >Message</th>
+                                    <th style="color: black;">Record</th>
                                     <th colspan="3" style="color: black;">Action</th>
                                 </head>
                                 <tbody>
                                     <tr class="color">
                                       <td>1</td>   
                                       <td>this the first post</td>
-                                      <td>Emmy</td>
+                                      <td>Intervention</td>
                                       <td><a href="#" class="edit">edit</a></td>
                                       <td><a href="#" class="delete">delete</a></td>
                                       <td><a href="#" class="publish">resolved</a></td>
@@ -57,7 +57,7 @@
                                     <tr>
                                            <td style="color: black;">2</td>   
                                            <td style="color: black;">this the second post</td>
-                                           <td style="color: black;">Melvine</td>
+                                           <td style="color: black;">Red-flag</td>
                                            <td><a href="#" class="edit">edit</a></td>
                                            <td><a href="#" class="delete">delete</a></td>
                                            <td><a href="#" class="publish">rejected</a></td>
