--- a/UI/pages/index.html
+++ b/UI/pages/index.html
@@ -25,7 +25,7 @@
             <h1>WELCOME TO <span class="colorchange">BROADCASTER</span><br>
                 HOUSE OF RECORDS</h1>
                 <a href="../pages/login.html" class="btn btn-full">Click to Add</a>
-                <a href="#" class="btn btn-nav">show me more</a>
+                <a href="../pages/show.html" class="btn btn-nav">show me more</a>
                 </div>
         </header>
   <div class="footer">
