chore(login-2): login form 2
This is the login for the only admin

[finishes:#169625430]

--- a/UI/pages/user.html
+++ b/UI/pages/user.html
@@ -52,7 +52,7 @@
                                       <td>Intervention</td>
                                       <td><a href="#" class="edit">edit</a></td>
                                       <td><a href="#" class="delete">delete</a></td>
-                                      <td><a href="#" class="publish">resolved</a></td>
+                                      <td><a href="../pages/list.html" class="publish">More</a></td>
                                     </tr>
                                     <tr>
                                            <td style="color: black;">2</td>   
@@ -60,7 +60,7 @@
                                            <td style="color: black;">Red-flag</td>
                                            <td><a href="#" class="edit">edit</a></td>
                                            <td><a href="#" class="delete">delete</a></td>
-                                           <td><a href="#" class="publish">rejected</a></td>
+                                           <td><a href="../pages/list.html" class="publish">More</a></td>
                                          </tr>
                                 </tbody>
                             </table>
