--- a/UI/pages/list.html
+++ b/UI/pages/list.html
@@ -38,7 +38,7 @@
                            <div class="content">
                             <h2 class="page-title">Manage Records</h2>
                             <div class="contact">
-                <h2 class="page-title" style="color: black; margin-bottom: 20px; margin-left:500px;">List of Records</h2>
+                <h2 class="page-title" style="color: black; margin-bottom: 20px; text-align: left;"><u>List of Records</u></h2>
                 <table>
                     <tr>
                         <th>Your names</th>
@@ -49,6 +49,7 @@
                         <th>Uploaded Image</th>
                         <th>Uploaded Video</th>
                         <th>Message</th>
+                        <th>Status</th>
                     </tr>
                     <tr>
                         <td>Daniella Wilson</td>
@@ -59,6 +60,7 @@
                         <td><img src="../images/corrupt.jpg"></td>
                         <td><img src="../images/download (1).jpg"></td>
                         <td>Hello world</td>
+                        <td>Rejected</td>
                     </tr>
                     <tr>
                       <td>Daniella Willock</td>
@@ -69,6 +71,7 @@
                       <td><img src="../images/corrupt.jpg"></td>
                       <td><img src="../images/download (1).jpg"></td>
                       <td>Hello world</td>
+                      <td>Resolved</td>
                   </tr>
                   <tr>
                     <td>Daniella Willock</td>
@@ -79,6 +82,7 @@
                     <td><img src="../images/images (20).jpg"></td>
                     <td><img src="../images/download (1).jpg"></td>
                     <td>Hello world</td>
+                    <td>Under Investigation</td>
                 </tr>
                 </table>
             </div>
