--- a/UI/pages/sign up.html
+++ b/UI/pages/sign up.html
@@ -32,7 +32,7 @@
                       <a href="../pages/index.html"><button type="button" class="primary">About Us</button></a>
                     </div>
                     <div class="col-md-2 register-right">  
-                        <h2>Register Here</h2>
+                        <h2 style="color: #fff;">Register Here</h2>
                         <div class="register-form">
                             <div class="form-group">
                               <input type="text" class="form-control" placeholder="First name">
