feature(admin): An admin page
An admin should view all records and change status

[finishes:##169534403]

--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -13,7 +13,7 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
-                     <li><a href="../pages/login.html">Admin</a></li>
+                     <li><a href="../pages/login-2.html">Admin</a></li>
                      <li><a href="../pages/login.html">Sign In</a></li>
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
@@ -22,7 +22,7 @@
                 </div>
             </nav>
             <div class="login-box">
-                <h1>Login</h1>
+                <h1>User</h1>
                 <div class="textbox">
                         <img src="../images/user.jpg">
                     <input type="text" placeholder="Username" name="" value="">
