--- a/UI/pages/index.html
+++ b/UI/pages/index.html
@@ -13,7 +13,7 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
-                     <li><a href="../pages/admin.html">Admin</a></li>
+                     <li><a href="../pages/login-2.html">Admin</a></li>
                      <li><a href="../pages/login.html">Sign In</a></li>
                      <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
@@ -41,7 +41,7 @@
                     <div class="border"></div>
                     <ul>
                         <a href="../pages/index.html"><li>Home</li></a>
-                        <a href="../pages/admin.html"><li>Admin</li></a>
+                        <a href="../pages/login-2.html"><li>Admin</li></a>
                         <a href="../pages/login.html"><li>Sign In</li></a>
                         <a href="../pages/sign up.html"><li>Sign Up</li></a>
                         <a href="../pages/contact.html"><li>Contact us</li></a>
