feature(list-admin):An admin list
An admin should view all list contain user's records

[finishes:#169534340]

--- a/UI/pages/admin.html
+++ b/UI/pages/admin.html
@@ -26,14 +26,13 @@
          <div class="admin-wrapper">
          <div class="left-sidebar">
              <ul> 
-                <li><a href="../pages/status.html">Users </a></li>
-                 <li><a href="../pages/list.html">List all records</a></li>
+                <li><a href="../pages/admin.html">Users </a></li>
                  <li><a href="../pages/login.html">Log Out</a></li>
                 </ul>
             </div>
             <div class="admin-content">
                 <div class="content">
-                 <h2 class="page-title">Manage Posts</h2>
+                 <h2 class="page-title">Manage Records</h2>
                  <table>
                      <head>
                          <th style="color: black;">SN</th>
@@ -45,7 +44,7 @@
                      <tbody>
                          <tr class="color">
                            <td>1</td>   
-                           <td>Got someone with an incident related to corruption</td>
+                           <td>Got an image of someone with an incident related to corruption</td>
                            <td>Red-flag</td>
                            <td> 
                                 <select class="edit">
@@ -54,7 +53,7 @@
                                 <option>Rejected</option>
                                 <option>Under Investigation</option>
                                </select></td>
-                           <td><a href="../pages/list.html" class="edit">More</a></td>  
+                           <td><a href="../pages/list2.html" class="edit">More</a></td>  
                          </tr>
                          <tr class="color">
                                 <td>2</td>   
