--- a/UI/pages/user.html
+++ b/UI/pages/user.html
@@ -40,15 +40,15 @@
                             <h2 class="page-title">Manage Records</h2>
                             <table>
                                 <head>
-                                    <th style="color: black;">SN</th>
-                                    <th style="color: black;" >Message</th>
-                                    <th style="color: black;">Record</th>
+                                    <th style="color: black;">ID</th>
+                                    <th style="color: black;" >Comment</th>
+                                    <th style="color: black;">Type</th>
                                     <th colspan="3" style="color: black;">Action</th>
                                 </head>
                                 <tbody>
                                     <tr class="color">
                                       <td>1</td>   
-                                      <td>this the first post</td>
+                                      <td>Looking for bad roads in Kirehe, we hope that you gonna solve it</td>
                                       <td>Intervention</td>
                                       <td><a href="#" class="edit">edit</a></td>
                                       <td><a href="#" class="delete">delete</a></td>
@@ -56,7 +56,7 @@
                                     </tr>
                                     <tr>
                                            <td style="color: black;">2</td>   
-                                           <td style="color: black;">this the second post</td>
+                                           <td style="color: black;">Got an image of someone with an incident related to corruption</td>
                                            <td style="color: black;">Red-flag</td>
                                            <td><a href="#" class="edit">edit</a></td>
                                            <td><a href="#" class="delete">delete</a></td>
