--- a/UI/pages/create.html
+++ b/UI/pages/create.html
@@ -39,13 +39,13 @@
                  <div class="contact">
                         <div class="contact-text">
                            <div class="contact-items">
-                               <input type="text" placeholder="Your names....">
-                               <input type="text" placeholder="Your email...">
-                               <input type="text" placeholder="Your Phone number....">
-                               <input type="text" placeholder="Your address....">
-                               <input type="text" placeholder="Incident address...">
+                               <input type="text" placeholder="Title....">
+                               <input type="text" value="Red-flag">
+                               <!-- <input type="text" placeholder="Your Phone number...."> -->
+                               <input type="text" placeholder="Location....">
+                               <input type="text" value="Draft">
                                <textarea id="textarea1" cols="20" rows="20" placeholder="Your incident location!!! google map"></textarea> <br>
-                               <textarea id="textarea2" cols="20" rows="20" placeholder="Your Message!!!"></textarea><br>
+                               <textarea id="textarea2" cols="20" rows="20" placeholder="Comment!!!"></textarea><br>
                                <div class="file">
                                    Upload Image:
                                <input type="file" name="inpFile" id="inpFile">
