--- a/UI/pages/sign up.html
+++ b/UI/pages/sign up.html
@@ -50,10 +50,10 @@
                                             <input type="email" class="form-control" placeholder="Email">
                                           </div> 
                                           <div class="form-group">
-                                                <input type="password" class="form-control" placeholder="New password">
+                                                <input type="password" class="form-control" placeholder="Password">
                                               </div> 
                                               <div class="form-group">
-                                                    <input type="password" class="form-control" placeholder="Confirm password">
+                                                    <input type="password" class="form-control" placeholder="Confirm Password">
                                                   </div> 
                                                  <a href="../pages/login.html"><button type="button" class="primary">Register</button></a>
                         </div>
