--- a/UI/pages/admin.html
+++ b/UI/pages/admin.html
@@ -11,15 +11,7 @@
         <header style="height: 160px;">
             <nav>
                 <div class="row clearfix">
-                        <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
-                 <ul class="main-nav animated slideInDown" id="check-class">
-                     <li><a href="../pages/index.html">Home</a></li>
-                     <li><a href="../pages/login-2.html">Admin</a></li>
-                     <li><a href="../pages/login.html">Sign In</a></li>
-                     <li><a href="../pages/sign up.html">Sign Up</a></li>
-                     <li><a href="../pages/contact.html">Contact</a></li>
-                 </ul>
-                 <a href="#" class="mobile-icon" onclick="slideshow()">Menu</a>
+                   <a href="../pages/index.html"><div class="logo"><span>B</span>road<span1>C</span1>aster</div></a>
                 </div>
             </nav>
         
