(feature):changing some color
As a desginer I would like to change my website as well as possible

[finishes:#169796485]

--- a/UI/pages/create.html
+++ b/UI/pages/create.html
@@ -14,9 +14,6 @@
                         <div class="logo"><span>B</span>road<span1>C</span1>aster</div>
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
-                     <li><a href="../pages/login-2.html">Admin</a></li>
-                     <li><a href="../pages/login.html">Sign In</a></li>
-                     <li><a href="../pages/sign up.html">Sign Up</a></li>
                      <li><a href="../pages/contact.html">Contact</a></li>
                  </ul>
                  <a href="#" class="mobile-icon" onclick="slideshow()">Menu</a>
@@ -41,7 +38,6 @@
                            <div class="contact-items">
                                <input type="text" placeholder="Title....">
                                <input type="text" value="Red-flag">
-                               <!-- <input type="text" placeholder="Your Phone number...."> -->
                                <input type="text" placeholder="Location....">
                                <input type="text" value="Draft">
                                <textarea id="textarea1" cols="20" rows="20" placeholder="Your incident location!!! google map"></textarea> <br>
@@ -54,7 +50,7 @@
                                     Upload video:
                                 <input type="file" name="inpFile" id="inpFile">
                                 </div>
-                               <a href="#">Add Record</a>
+                               <a href="#" id="reco">Add Record</a>
                            </div>
                          </div>
                         </div>
