--- a/UI/pages/sign up.html
+++ b/UI/pages/sign up.html
@@ -23,7 +23,7 @@
                     <div class="col-md">
                         <div class="row">
                     <div class="col-md-1 register-left">  
-                        <img src="../images/gp.png">
+                        <img src="../images/map2.png">
                       <h3 id="joi">Join Us</h3>
                       <p>BroadCaster leading to solutions related to corruption<br> and intervene with the government </p>
                       <a href="../pages/index.html"><button type="button" class="primary">About Us</button></a>
