ch(changes): changing UI
As LFA's feedback
 work to make the register form the main action on the signup page
Delete about us if there is no dedicated page for it.
Login page: Be specific ( user=> Login User) and reduce the empty space
work also on show more( make the empty space usable)
create the page for the edit reflag and intervention
work on redirect to home after logout
Be specific about the pages( Interventions or Red-flags)

[finishes:#169948372]

--- a/UI/pages/admin.html
+++ b/UI/pages/admin.html
@@ -20,7 +20,7 @@
          <div class="left-sidebar">
              <ul> 
                 <li><a href="../pages/admin.html">Users </a></li>
-                 <li><a href="../pages/login.html">Log Out</a></li>
+                 <li><a href="../pages/index.html">Log Out</a></li>
                 </ul>
             </div>
             <div class="admin-content">
