--- a/UI/pages/red.html
+++ b/UI/pages/red.html
@@ -14,7 +14,7 @@
                  <ul class="main-nav animated slideInDown" id="check-class">
                      <li><a href="../pages/index.html">Home</a></li>
                      <li><a href="../pages/create.html">Red-flag record</a></li>
-                     <li><a href="../pages/create.html">Intervention record</a></li>
+                     <li><a href="../pages/create2.html">Intervention record</a></li>
                      
                  </ul>
                  <a href="#" class="mobile-icon" onclick="slideshow()">Menu</a>
