--- a/UI/pages/show.html
+++ b/UI/pages/show.html
@@ -24,13 +24,13 @@
 
         <div class="box-10">
             <div class="imgbox-10">
-                <img src="../images/img5.jpg"><br><br><br>
+                <img src="../images/img5.jpg"><br><br><br><br><br>
                 <img src="../images/img7.jpg" alt="">
             </div>
             <div class="content-20">
-                <h2 id="wapp">Red-flag records</h2>
-                <p id="wap">An incident linked to corruption.</p><br><br><br>
-                <h2 id="wapp-2">Intervention records</h2>
+              <a href="../pages/login.html"><h2 id="wapp">Red-flag records</h2></a>
+                <p id="wap">An incident linked to corruption.</p><br><br><br><br><br>
+               <a href="../pages/login.html"><h2 id="wapp-2">Intervention records</h2></a>
                 <p id="wap-2">a call for a government agency to intervene e.g repair bad road sections, collapsed bridges, flooding e.t.c.</p>
             </div>
         </div>
