--- a/UI/pages/user2.html
+++ b/UI/pages/user2.html
@@ -47,7 +47,7 @@
                                       <td>1</td>   
                                       <td>Looking for bad roads in Kirehe, we hope that you gonna solve it</td>
                                       <td>Intervention</td>
-                                      <td><a href="../pages/edit.html" class="edit">edit</a></td>
+                                      <td><a href="../pages/edit2.html" class="edit">edit</a></td>
                                       <td><a href="#" class="delete">delete</a></td>
                                       <td><a href="../pages/list.html" class="publish">More</a></td>
                                     </tr>
