--- a/UI/pages/create2.html
+++ b/UI/pages/create2.html
@@ -23,7 +23,7 @@
          <div class="admin-wrapper">
          <div class="left-sidebar">
              <ul>
-                 <li><a href="../pages/user.html">Manage Records</a></li>
+                 <li><a href="../pages/user2.html">Manage Records</a></li>
                 
                  <li><a href="../pages/index.html">Log Out</a></li>
                 </ul>
@@ -32,12 +32,12 @@
               
 
                 <div class="content">
-                 <h2 class="page-title">Red-flag Records</h2>
+                 <h2 class="page-title">Intervention Records</h2>
                  <div class="contact">
                         <div class="contact-text">
                            <div class="contact-items">
                                <input type="text" placeholder="Title....">
-                               <input type="text"  value="Red-flag">
+                               <input type="text"  value="Intervention">
                                <input type="text" placeholder="Location....">
                                <input type="text" value="Draft">
                                <textarea id="textarea1" cols="20" rows="20" placeholder="Your incident location!!! google map"></textarea> <br>
