--- a/UI/pages/edit.html
+++ b/UI/pages/edit.html
@@ -32,25 +32,17 @@
               
 
                 <div class="content">
-                 <h2 class="page-title">Red-flag Records</h2>
+                 <h2 class="page-title">Edit Red-flag Records</h2>
                  <div class="contact">
                         <div class="contact-text">
                            <div class="contact-items">
-                               <input type="text" placeholder="Title....">
+                               <input type="text" value="Incident linking to corruption">
                                <input type="text"  value="Red-flag">
-                               <input type="text" placeholder="Location....">
+                               <input type="text" value="Kigali-Remera">
                                <input type="text" value="Draft">
                                <textarea id="textarea1" cols="20" rows="20" placeholder="Your incident location!!! google map"></textarea> <br>
-                               <textarea id="textarea2" cols="20" rows="20" placeholder="Comment!!!"></textarea><br>
-                               <div class="file">
-                                   Upload Image:
-                               <input type="file" name="inpFile" id="inpFile">
-                               </div><br>
-                               <div class="file">
-                                    Upload video:
-                                <input type="file" name="inpFile" id="inpFile">
-                                </div>
-                               <a href="#" id="reco">Add Record</a>
+                               <input type="text" id="textarea2" cols="20" rows="20" value="Got an image of someone with an incident related to corruption"></textarea><br>
+                               <a href="#" id="reco">Edit Record</a>
                            </div>
                          </div>
                         </div>
