(chore):LFA's feedbacks
expand login form
make the same space at left and right side to the line at login forn
leave a space in sign up form

[finishes:#169948372]

--- a/UI/pages/login-2.html
+++ b/UI/pages/login-2.html
@@ -20,12 +20,12 @@
                 <div class="textbox">
                         <img src="../images/user.jpg">
                     <input type="text" placeholder="Username" name="" value="">
-                    </div>
+                    </div><br>
                     <div class="textbox">
                         <img src="../images/password.png">
                         <input type="password" placeholder="Password" name="" value="">
                         </div>
-                        <br><br>
+                        <br><br><br>
                         <a href="../pages/admin.html"><input class="bt" type="button" name="" value="Login"></a>
                 </div>
             </div>
