--- a/UI/pages/login.html
+++ b/UI/pages/login.html
@@ -23,11 +23,11 @@
                 <div class="textbox">
                         <img src="../images/user.jpg">
                     <input type="text" placeholder="Username" name="" value="">
-                    </div>
+                    </div><br>
                     <div class="textbox">
                         <img src="../images/password.png">
                         <input type="password" placeholder="Password" name="" value="">
-                        </div><br><br>
+                        </div><br><br><br>
                         <a href="../pages/red.html"><input class="bt" type="button" name="" value="Login"></a>
                 </div>
             </div>
