--- a/UI/pages/sign up.html
+++ b/UI/pages/sign up.html
@@ -27,25 +27,25 @@
                         <div class="register-form">
                             <div class="form-group">
                               <input type="text" class="form-control" placeholder="First name">
-                            </div>
+                            </div><br>
                             <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Second name">
-                                  </div>
+                                  </div><br>
                             <div class="form-group">
                                     <input type="text" class="form-control" placeholder="Username">
-                                  </div> 
+                                  </div> <br>
                                   <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Phone number">
-                                      </div> 
+                                      </div> <br>
                                       <div class="form-group">
                                             <input type="email" class="form-control" placeholder="Email">
-                                          </div> 
+                                          </div> <br>
                                           <div class="form-group">
                                                 <input type="password" class="form-control" placeholder="Password">
-                                              </div> 
+                                              </div> <br>
                                               <div class="form-group">
                                                     <input type="password" class="form-control" placeholder="Confirm Password">
-                                                  </div> 
+                                                  </div> <br>
                                                  <a href="../pages/login.html"><button type="button" class="primary">Register</button></a>
                         </div>
                     </div>
